// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadingStatus actions #setEntityFailed should run action 1`] = `
Object {
  "payload": Object {
    "entity": "playersById",
    "uid": "3j4kj34kjnjnkjn",
  },
  "type": "APP_SET_ENTITY_FAILED",
}
`;

exports[`loadingStatus actions #setEntityLoaded should run action 1`] = `
Object {
  "payload": Object {
    "entity": "playersById",
    "uid": "3j4kj34kjnjnkjn",
  },
  "type": "APP_SET_ENTITY_LOADED",
}
`;

exports[`loadingStatus actions #setEntityLoading should run action 1`] = `
Object {
  "payload": Object {
    "entity": "playersById",
    "uid": "3j4kj34kjnjnkjn",
  },
  "type": "APP_SET_ENTITY_LOADING",
}
`;

exports[`loadingStatus reducer should reduce setEntityLoading correctly 1`] = `
Object {
  "player/343434": "loading",
}
`;

exports[`loadingStatus reducer should reduce setEntityLoading correctly 2`] = `
Object {
  "player/343434": "loaded",
}
`;

exports[`loadingStatus reducer should reduce setEntityLoading correctly 3`] = `
Object {
  "player/343434": "failed",
}
`;

exports[`selectors #build should return selector functions 1`] = `
Object {
  "isPlayerCompleted": [Function],
  "isPlayerFailed": [Function],
  "isPlayerLoaded": [Function],
  "isPlayerLoading": [Function],
  "isPlayerNotStarted": [Function],
}
`;

exports[`selectors #build should return selector functions with short name in case extended: false option provided 1`] = `
Object {
  "isCompleted": [Function],
  "isFailed": [Function],
  "isLoaded": [Function],
  "isLoading": [Function],
  "isNotStarted": [Function],
}
`;
